Add Delete Method and Bootstrap 4

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <!--This is importing the frontend framework Foundation and also a google web font Raleway.-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.1/css/foundation-float.css"  />
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
 
 </head>
 <body>
